# Frida

./: .gitignore  CMakeLists.txt  Frida.ipynb  README.md  environment.yml  intera.sh  materials.json  materials_ink.json  materials_mars_7x7.json  materials_mars_8x8.json  materials_mars_9x12.json  materials_vae_brush.json  materials_vae_sharpie.json  materials_xarm_paint.json  package.xml  requirements.txt  requirements_python3.txt  requirements_windows.txt  sawyernotes.txt  setup.py  tbd_notebook.ipynb  tbd_notebook2.ipynb
RunLogs/: LoggingCachedPlans.py
cofrida/: README.md  RunLora.ipynb  codraw_metric.py  controlnet_dataset.py  copaint_dataset.py  create_copaint_data.py  create_copaint_data.sh  create_copaint_data_generator.sh  create_data_controlnet.py  mturk.py  test_instruct_pix2pix.py  train_controlnet.py  train_controlnet.sh  train_instruct_pix2pix.py  train_instruct_pix2pix.sh  train_lora.py  train_lora.sh
frida-hci/: api.py  app.py  requirements.txt
frida-hci/public/: index.html  start.html
painting_plans/: color_palette.pkl  painting.pkl  todo_2.pkl
pylips_phrases/: Justin_output.pkl
scripts/: cached_H_canvas.pkl  cached_color_calibration.pkl  camera_test.py  clip_loss.py  color_calib.py  content_loss.py  continuous_brush_model.py  dslr.py  dslr_gphoto.py  export_strokes.py  harris.py  ink_drawing_from_photo.sh  intrinsic_calib.py  model_brush_strokes.py  model_brush_strokes3.py  options.py  paint.py  paint_planner.py  paint_utils.py  painter.py  painting_materials.py  plan.py  plan_all_strokes.py  plan_all_strokes_diffvg.py  robot.py  simulated_painting_environment.py  sketch_loss.py  stroke_calibration.py  strokes.py  style_loss.py  tensorboard.py  test.sh  torch_painting_models.py  torch_painting_models_continuous.py
scripts/cache/: cached_H_canvas.pkl  cached_H_coord.pkl  cached_color_calibration.pkl  cached_params.pkl  colors.npy  param2img.pt  (+9 more)
src/: .gitignore  Extract_PD_layers.py  README.md  audio_test.py  brush_stroke.py  codraw.py  codraw_metric_analysis.py  codraw_metric_display.py  cofrida.py  commands.sh  continuous_brush_model.py  continuous_brush_model_diffvg.py  controlnet_dataset.py  create_data_controlnet.py  create_lora_data.py  create_plan.py  diffvg_helper.py  dslr.py  execute_plan.py  execute_plan_ros.py  export_strokes.py  extract_weights.py  fast_energy_RGB_lap_adjusted_weights.py  fast_energy_laplacian.py  fill_in.py  graveyard.py  harris.py  lora_dataset.py  model_brush_strokes2.py  model_brush_strokes3.py  model_brush_strokes4.py  model_brush_strokes5.py  mturk.py  multimix.py  options.py  options_hci.py  paint.py  paint_backup.py  paint_planner.py  paint_utils.py  (+32 more)
traj-vae-experiments/: autoencoders.py  loss.py  test.ipynb  train.py  visualize.ipynb
traj_vae/: autoencoders.py  train.ipynb  train.py  traj_dataset.py  traj_helpers.py
(+747 files in other folders)
